Scheme command : IDENT to ident_list

--- a/notes.org
+++ b/notes.org
@@ -686,8 +686,12 @@ Inductive nat : Set :=  O : nat | S : nat -> nat.
 
 Scheme Induction for nat Sort Set.
 Scheme Minimality for nat Sort Type.
-Scheme Minimality for nat Sort Prop.
+Scheme haha := Minimality for nat Sort Prop.
 #+end_src
+
+/home/fnifnou/Documents/stageCoq/coq/doc/tools/docgram/common.edit_mlg : 
+309 : IDENT
+819 : ident
 
 ** TODO vernacexpr
 
