to be continued

--- a/notes.org
+++ b/notes.org
@@ -827,6 +827,13 @@ none -> comporte comme type qd y a pas de Sort sch_sort
 faire un tableau avec les schemes existant et changer tous les match with avec des iter.
 dans ind_tables
 
+#+begin_src coq
+Inductive nat : Set :=  O : nat | S : nat -> nat.
+
+Register Scheme nat_rect as rec_dep for hoho.
+
+#+end_src
+
 ** TODO centraliser plus de choses dans ind_tables : 
 actuelllement il y a plusieur sort de schema : interne et schema scheme, e y en a qui sont les deux comme equality et boolean equality
 une tech pour faire des schemes : do scheme
